# docs

./: .gitignore  .mintignore  CLAUDE.md  INTERACTIVE_QUICKSTART_WIDGET.md  MODEL-MATRIX.md  README.md  context7.json  docs.json  docusaurus.config.ts  link-check.json  package-lock.json  sidebarsLfm.ts  style.css  styles.js
.github/: CODEOWNERS
.github/workflows/: check-docs.yaml  check-notebookes.yaml  check-notebooks.yaml  check.yaml  deploy-preview.yaml  run-notebooks.yaml
customization/finetuning-frameworks/: datasets.mdx  leap-finetune.mdx  trl.mdx  unsloth.mdx
customization/getting-started/: welcome.mdx
customization/tools/: workbench.mdx
deployment/getting-started/: connect-ai-tools.mdx  (+1 more)
docs/: index.mdx
examples/: index.md  index.mdx
leap/: changelog.mdx  find-model.mdx  finetuning.mdx  index.mdx  laptop-support.mdx  vibe-check-models.mdx
lfm/: index.mdx
notebooks/: LFM2_Inference_with_Ollama.ipynb  LFM2_Inference_with_Transformers.ipynb  LFM2_Inference_with_llama_cpp.ipynb  LFM2_Inference_with_vLLM.ipynb  README.md  grpo_for_verifiable_tasks.ipynb  pyproject.toml  quickstart_snippets.ipynb  💧_LFM2_5_SFT_with_TRL.ipynb  💧_LFM2_5_VL_SFT_with_TRL.ipynb  💧_LFM2_DPO_with_TRL.ipynb
quickstarts/: LFM2-1.2B__ollama.md  LFM2-1.2B__transformers.md  LFM2-2.6B__transformers.md  LFM2-350M__transformers.md  LFM2-700M__transformers.md  LFM2-8B-A1B__ollama.md  LFM2-8B-A1B__transformers.md
runnable-examples/: main.py  pyproject.toml
scripts/: generate_snippets.py
snippets/: connect-ai-tools.mdx
util/: README.md  modal_runner.py  run_notebook_test.py
(+189 files in other folders)
